# serverless-product-catalog-api

./: .gitignore  API_GATEWAY_TESTING.md  README.md  SERVERLESS_API_TESTING.md  SETUP.md  docker-compose.dev.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  samconfig.toml  template.yaml
.github/workflows/: terraform_checks.yml
environments/dev/: main.tf  outputs.tf  providers.tf  variables.tf
modules/dynamodb/: main.tf  outputs.tf  variables.tf
modules/iam/: main.tf
modules/lambda/: main.tf  variables.tf
scripts/: build-lambda-packages.sh  local-dev-setup.sh  setup-env.sh  test-dynamodb.py  verify-setup.py
src/: requirements.txt
src/config/: __init__.py  settings.py
src/handlers/: brands.py  categories.py  products.py
src/models/: __init__.py  brand.py  category.py  product.py
src/services/: brand_service.py  category_service.py  product_service.py
src/utils/: db_operations.py  exceptions.py  logger.py  response.py
terraform/environments/dev/: DEPLOYMENT_NOTES.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/api_gateway/: README.md  main.tf  outputs.tf  (+1 more)
tests/: README.md  run_integration_tests.py  test_products_handler.py
tests/e2e/: README.md  run_all_e2e_tests.py  run_sam_local_e2e_tests.py  test_brands_e2e.py  test_categories_e2e.py  test_products_e2e.py  test_with_sam_local.sh
tests/integration/: test_brand_integration.py  test_category_integration.py  test_product_integration.py
tests/unit/: test_brands_handler.py  test_categories_handler.py  test_products_handler.py
(+12 files in other folders)
